{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 170,
  "lineage": "f0aad217-14b9-abc6-12c8-2a9145e44237",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "managed_node",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bd01824d64912730",
            "arn": "arn:aws:ec2:us-east-1:211125645338:instance/i-0e6b95d2123b61f14",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e6b95d2123b61f14",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fe9b55e97115b6e6",
            "private_dns": "ip-10-0-1-93.ec2.internal",
            "private_ip": "10.0.1.93",
            "public_dns": "ec2-54-224-0-220.compute-1.amazonaws.com",
            "public_ip": "54.224.0.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-099b42edea95db4fc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff22ade92696ba69",
            "tags": {
              "Name": "host_node_0"
            },
            "tags_all": {
              "Name": "host_node_0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ce564c7d41685812"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.compute.aws_key_pair.aws-key",
            "module.compute.data.aws_ssm_parameter.webserver-ami",
            "module.vpc.aws_security_group.ansible_public_sg",
            "module.vpc.aws_subnet.ansible_public_subnet",
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bd01824d64912730",
            "arn": "arn:aws:ec2:us-east-1:211125645338:instance/i-0b5ef43b955af1d0f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b5ef43b955af1d0f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0324929ca53706899",
            "private_dns": "ip-10-0-1-12.ec2.internal",
            "private_ip": "10.0.1.12",
            "public_dns": "ec2-50-16-32-57.compute-1.amazonaws.com",
            "public_ip": "50.16.32.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05549e5bbf1270772",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff22ade92696ba69",
            "tags": {
              "Name": "host_node_1"
            },
            "tags_all": {
              "Name": "host_node_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ce564c7d41685812"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.compute.aws_key_pair.aws-key",
            "module.compute.data.aws_ssm_parameter.webserver-ami",
            "module.vpc.aws_security_group.ansible_public_sg",
            "module.vpc.aws_subnet.ansible_public_subnet",
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bd01824d64912730",
            "arn": "arn:aws:ec2:us-east-1:211125645338:instance/i-0c76233b827a9cb00",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c76233b827a9cb00",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-037c0e4cd5e5ee114",
            "private_dns": "ip-10-0-1-239.ec2.internal",
            "private_ip": "10.0.1.239",
            "public_dns": "ec2-35-168-14-90.compute-1.amazonaws.com",
            "public_ip": "35.168.14.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aca16342eb2a725d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff22ade92696ba69",
            "tags": {
              "Name": "host_node_2"
            },
            "tags_all": {
              "Name": "host_node_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ce564c7d41685812"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.compute.aws_key_pair.aws-key",
            "module.compute.data.aws_ssm_parameter.webserver-ami",
            "module.vpc.aws_security_group.ansible_public_sg",
            "module.vpc.aws_subnet.ansible_public_subnet",
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bd01824d64912730",
            "arn": "arn:aws:ec2:us-east-1:211125645338:instance/i-0a962ae028a8e4e4d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a962ae028a8e4e4d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a759cdce0a9090f2",
            "private_dns": "ip-10-0-1-250.ec2.internal",
            "private_ip": "10.0.1.250",
            "public_dns": "ec2-3-91-24-122.compute-1.amazonaws.com",
            "public_ip": "3.91.24.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-064b11e840a769575",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff22ade92696ba69",
            "tags": {
              "Name": "host_node_3"
            },
            "tags_all": {
              "Name": "host_node_3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ce564c7d41685812"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.compute.aws_key_pair.aws-key",
            "module.compute.data.aws_ssm_parameter.webserver-ami",
            "module.vpc.aws_security_group.ansible_public_sg",
            "module.vpc.aws_subnet.ansible_public_subnet",
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ansible_igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125645338:internet-gateway/igw-08873c4e7058c2b6c",
            "id": "igw-08873c4e7058c2b6c",
            "owner_id": "211125645338",
            "tags": {
              "Name": "Ansible-Sandbox-Gateway"
            },
            "tags_all": {
              "Name": "Ansible-Sandbox-Gateway"
            },
            "vpc_id": "vpc-089894cc47ccd307d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ansible_public_route",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125645338:route-table/rtb-034cd88ea27c8b5c9",
            "id": "rtb-034cd88ea27c8b5c9",
            "owner_id": "211125645338",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08873c4e7058c2b6c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Ansible-Sandbox-RouteTable"
            },
            "tags_all": {
              "Name": "Ansible-Sandbox-RouteTable"
            },
            "vpc_id": "vpc-089894cc47ccd307d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.ansible_igw",
            "module.vpc.aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ansible_public_assoc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00151a00b16477ef3",
            "route_table_id": "rtb-034cd88ea27c8b5c9",
            "subnet_id": "subnet-0ff22ade92696ba69"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.ansible_igw",
            "module.vpc.aws_route_table.ansible_public_route",
            "module.vpc.aws_subnet.ansible_public_subnet",
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ansible_public_sg",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125645338:security-group/sg-0ce564c7d41685812",
            "description": "Used for access to the public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce564c7d41685812",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic from TCP/1233",
                "from_port": 1233,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1233
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic from TCP/80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic from TCP/8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ansible_public_sg",
            "name_prefix": "",
            "owner_id": "211125645338",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Ansible-SecurityGroup"
            },
            "tags_all": {
              "Name": "Ansible-SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-089894cc47ccd307d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ansible_public_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125645338:subnet/subnet-0ff22ade92696ba69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ff22ade92696ba69",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125645338",
            "tags": {
              "Name": "Ansible-Sandbox-Subnet"
            },
            "tags_all": {
              "Name": "Ansible-Sandbox-Subnet"
            },
            "vpc_id": "vpc-089894cc47ccd307d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ansible_vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125645338:vpc/vpc-089894cc47ccd307d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05068756b4d3df4e0",
            "default_route_table_id": "rtb-0454639333ec2ed0f",
            "default_security_group_id": "sg-0acc6b2d9ff6e0407",
            "dhcp_options_id": "dopt-05930896f9727bfab",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-089894cc47ccd307d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0454639333ec2ed0f",
            "owner_id": "211125645338",
            "tags": {
              "Name": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "Terraform-VPC"
            }
          }
        }
      ]
    }
  ]
}